update layout, create timers, save before clean elements ids

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -61,18 +61,19 @@ $tab-padding-vertical:                           16px
     position: absolute
     right: 20px
     bottom: 160px
-    width: 25%
+    width: 30%
     font: 23px "Open Sans" 
     font-style: italic
     text-align: right
     opacity: .85
+    text-shadow: 0 0 3px rgba(black, .7)
 
   .help-button
     position: absolute
     right: 20px
     bottom: 20px
     padding: 30px 100px 
-    background: #D8B696
+    background: #CD6419
     font: 24px "Open Sans" 
     transition: background-color 0.5s ease;
     opacity: .75
@@ -80,10 +81,12 @@ $tab-padding-vertical:                           16px
     border-radius: 2px
     color: white
     &:hover
-      background: #E58C43
+      background: #FD5B0F
       color: white
 
-
+.tab-wrap 
+  background: #31363B
+  overflow: hidden
 
 .uk-tab
   font: bold 24px "Open Sans Condensed"
@@ -94,12 +97,23 @@ $tab-padding-vertical:                           16px
     &:active
       color: #222
 
+.get-to-concert
+  background: #31363B
+  padding: 20px
+  h2
+    color: white
+    font: 200 24px "Open Sans"
+
 
 .tab-content
   list-style: none
   margin: 0
   padding: 0
   width: 100%
+  height: 480px
+  background: #ddd
+
 .concert-view
   height: 480px
+
 
