update layout, timres, tabs, styles end etc

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,3 +1,4 @@
+$icon-font-path:                                 "fonts"
 $base-body-font-family:                          "Open Sans"
 $tab-border:                                     #aaa
 $tab-border-width:                               1px
@@ -100,9 +101,17 @@ $tab-padding-vertical:                           16px
 .get-to-concert
   background: #31363B
   padding: 20px
+  text-align: center
   h2
-    color: white
+    display: block
+    color: #ddd
     font: 200 24px "Open Sans"
+  span
+    display: block
+    color: #ddd
+    padding: 0
+    margin: 0
+    line-height: 0
 
 
 .tab-content
@@ -113,7 +122,17 @@ $tab-padding-vertical:                           16px
   height: 480px
   background: #ddd
 
+.countdown-view
+  font: 100 64px "Open Sans Condensed"
+  color: rgba(black, 0.7)
+
+
 .concert-view
+  background: rega(black, .4)
   height: 480px
 
+
+.city-nav
+  background: rega(black, .4)
+  background: rgba
 
